[gd_scene load_steps=4 format=3 uid="uid://7ctoh26726s8"]

[ext_resource type="Script" uid="uid://uh5o6myhxgfd" path="res://scripts/settings.gd" id="1_6wm04"]
[ext_resource type="Texture2D" uid="uid://b1yc6jr1jbc2s" path="res://res/img/blue-with-stars.png" id="2_f4mfi"]
[ext_resource type="AudioStream" uid="uid://c760j4es2247o" path="res://res/sounds/click.wav" id="3_es4n0"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_6wm04")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_f4mfi")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.5
offset_top = 50.0
offset_right = 67.5
offset_bottom = 85.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Settings:"

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_es4n0")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 129.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftVContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_right = -350.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlatformSpeedLabel" type="Label" parent="UI/LeftVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Base platform speed:"

[node name="EmptyLabel" type="Label" parent="UI/LeftVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="BallIncSpeedLabel" type="Label" parent="UI/LeftVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Ball speed increase:"

[node name="EmptyLabel2" type="Label" parent="UI/LeftVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="BallSpeedLabel" type="Label" parent="UI/LeftVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Ball speed at start:"

[node name="EmptyLabel3" type="Label" parent="UI/LeftVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="BallMaxSpeedLabel" type="Label" parent="UI/LeftVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Ball max speed:"

[node name="EmptyLabel4" type="Label" parent="UI/LeftVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="AISpeedLabel" type="Label" parent="UI/LeftVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "AI platform speed
multiplier:"

[node name="EmptyLabel5" type="Label" parent="UI/LeftVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="SaveButton" type="Button" parent="UI/LeftVContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Save"

[node name="PlatformSpeedSlider" type="HSlider" parent="UI"]
layout_mode = 0
offset_left = 346.0
offset_right = 596.0
offset_bottom = 16.0
scale = Vector2(1.1, 1.1)
min_value = 200.0
max_value = 1000.0
value = 200.0
rounded = true

[node name="SpeedIncreaseSlider" type="HSlider" parent="UI"]
layout_mode = 0
offset_left = 346.0
offset_top = 55.0
offset_right = 596.0
offset_bottom = 71.0
scale = Vector2(1.1, 1.1)
rounded = true

[node name="StartSpeedSlider" type="HSlider" parent="UI"]
layout_mode = 0
offset_left = 346.0
offset_top = 110.0
offset_right = 596.0
offset_bottom = 126.0
scale = Vector2(1.1, 1.1)
min_value = 200.0
max_value = 500.0
value = 200.0
rounded = true

[node name="MaxSpeedSlider" type="HSlider" parent="UI"]
layout_mode = 0
offset_left = 346.0
offset_top = 165.0
offset_right = 596.0
offset_bottom = 181.0
scale = Vector2(1.1, 1.1)
min_value = 550.0
max_value = 950.0
value = 550.0
rounded = true

[node name="AiMultilierSlider" type="HSlider" parent="UI"]
layout_mode = 0
offset_left = 346.0
offset_top = 215.0
offset_right = 596.0
offset_bottom = 231.0
scale = Vector2(1.1, 1.1)
min_value = 0.1
max_value = 1.0
step = 0.05
value = 0.1

[node name="MenuButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 360.0
offset_top = 296.0
offset_right = 610.0
offset_bottom = 339.0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Menu"

[node name="ResetButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 225.0
offset_top = 345.0
offset_right = 475.0
offset_bottom = 388.0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Reset"

[connection signal="pressed" from="UI/LeftVContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="UI/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="UI/ResetButton" to="." method="_on_reset_button_pressed"]
